; ModuleID = '/home/carl/AnghaBench/lwan/src/samples/clock/extr_gifenc.c_ge_close_gif.c'
source_filename = "/home/carl/AnghaBench/lwan/src/samples/clock/extr_gifenc.c_ge_close_gif.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan_strbuf = type { i32 }
%struct.TYPE_4__ = type { %struct.lwan_strbuf* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.lwan_strbuf* @ge_close_gif(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.lwan_strbuf*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load %struct.lwan_strbuf*, %struct.lwan_strbuf** %5, align 8
  store %struct.lwan_strbuf* %6, %struct.lwan_strbuf** %3, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load %struct.lwan_strbuf*, %struct.lwan_strbuf** %8, align 8
  %10 = call i32 @lwan_strbuf_append_char(%struct.lwan_strbuf* %9, i8 signext 59)
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %12 = call i32 @free(%struct.TYPE_4__* %11)
  %13 = load %struct.lwan_strbuf*, %struct.lwan_strbuf** %3, align 8
  ret %struct.lwan_strbuf* %13
}

declare dso_local i32 @lwan_strbuf_append_char(%struct.lwan_strbuf*, i8 signext) #1

declare dso_local i32 @free(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
